--- a/document_scan_ocr.ipynb
+++ b/document_scan_ocr.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Option 1 - Common words"
+    "## Attempt 1 - Common words"
    ]
   },
   {
@@ -127,53 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-08-05T20:24:47.949748Z",
-     "start_time": "2017-08-05T20:24:47.945389Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "due_date_usage\n"
-     ]
-    }
-   ],
-   "source": [
-    "words_for_name = '_'.join([w[0] for w in word_count.most_common(3)])\n",
-    "print(words_for_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-08-05T20:25:06.405712Z",
-     "start_time": "2017-08-05T20:25:06.401574Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "def get_datestamp():\n",
-    "    tdy = datetime.today()\n",
-    "    return '{}_{}_{}'.format(tdy.year, tdy.month, tdy.day)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-08-05T20:25:11.509798Z",
-     "start_time": "2017-08-05T20:25:11.504915Z"
+     "end_time": "2017-08-05T21:18:03.051599Z",
+     "start_time": "2017-08-05T21:18:03.041750Z"
     }
    },
    "outputs": [
@@ -186,6 +144,12 @@
     }
    ],
    "source": [
+    "words_for_name = '_'.join([w[0] for w in word_count.most_common(3)])\n",
+    "\n",
+    "def get_datestamp():\n",
+    "    tdy = datetime.today()\n",
+    "    return '{}_{}_{}'.format(tdy.year, tdy.month, tdy.day)\n",
+    "\n",
     "new_file_name = '{}_{}.jpg'.format(get_datestamp(), words_for_name)\n",
     "print (new_file_name)"
    ]
@@ -194,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Option 2 - String comparison"
+    "## Attempt 2 - String comparison"
    ]
   },
   {
@@ -279,27 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-08-05T20:25:44.368374Z",
-     "start_time": "2017-08-05T20:25:44.351147Z"
+     "end_time": "2017-08-05T21:31:32.058233Z",
+     "start_time": "2017-08-05T21:31:32.048643Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
     }
    ],
    "source": [
-    "fuzz.ratio(feb_elec_text, feb_gas_water_text)"
+    "print(fuzz.ratio(feb_elec_text, feb_gas_water_text))"
    ]
   },
   {
